# Eiriad-Programming-Language

./: .gitignore  Cargo.toml  Makefile  README.md  eiriad-spec.jsx
.github/workflows/: ci.yml  deploy-pages.yml
examples/: demo.ei  fn_decl.ei  http_all_demo.ei  http_demo.ei  http_get_fetch.ei  http_methods.ei  lambda_closure.ei  line_continuation.ei  match_option_result.ei  option_result_helpers.ei  server_basic.ei
scripts/: build_wasm_ei_app.sh  install_linux.sh
src/: ast.rs  checker.rs  cli_common.rs  error.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  runtime_exports.rs  todo_app.rs  wasm_api.rs  wasm_todo_host.rs
web/: index.html  main.js  todo.ei  todo.html  todo.js
