[package]
name = "eiriad"
version = "0.1.0"
edition = "2021"
description = "EIRIAD runtime and REPL"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "eiriad-repl"
path = "src/bin/eiriad_repl.rs"

[[bin]]
name = "eiriad"
path = "src/bin/eiriad.rs"

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tiny_http = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "HtmlInputElement", "KeyboardEvent", "Window", "XmlHttpRequest"] }
